# aligner-trading-deploy

./: .gitignore  Indian Options Trading Algorithm Development.md  Market_Research_Oct2025_Apr2026.md  NIFTY_BANKNIFTY_Market_Analysis_Oct2025_Apr2026.txt  NIFTY_Technical_Research_Apr2026.md  RUNBOOK.md  main.py  pyproject.toml  requirements.txt  run_autonomous.py  start_local.py  verify_live_indicators.py
.claude/: launch.json  settings.local.json
.streamlit/: config.toml
agent_team/: __init__.py  base_agent.py  context_builder.py  coordinator.py  event_analyst.py  fundamental_analyst.py  macro_analyst.py  portfolio_manager.py  risk_analyst.py  sector_analyst.py  technical_analyst.py
backtesting/: __init__.py  avoid_days_sweep.py  backtest_engine.py  backtest_last_year.py  data_loader.py  daywise_analysis.py  deep_analysis_output.txt  deep_day_analysis.py  deep_pattern_analysis.py  directional_gate_inloop_validate.py  directional_gate_lb3_thr05_walkfwd.py  directional_gate_lookback_sweep.py  directional_gate_robustness.py  directional_gate_test.py  download_real_intraday.py  ensemble_backtest.py  ensemble_iterations.py  full_analysis_backtest.py  full_trade_log_test.py  gap_classifier_sweep.py  gap_deep_dive.py  improvement_test.py  june_2025_deep_dive.py  last_year_a_vs_b.py  last_year_avoid_days_sweep.py  learn_entry_timing.py  learn_global_signals.py  learn_holding_period.py  learn_position_sizing.py  learn_strike_selection.py  (+72 more)
execution_engine/: Cargo.toml  build.rs
execution_engine/src/: grpc_server.rs  main.rs  order_router.rs  rate_limiter.rs  websocket.rs
(+201 files in other folders)
